--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: 🚀 Deploy
 on:
   push:
     branches:
-      - vimexx
+      - master
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
@@ -16,6 +16,8 @@ jobs:
     env:
       BUILD_SOURCE_DIR: .
       BUILD_ARTIFACT_STAGING_DIR: build/
+      BUILD_ARTIFACT_DESTINATION_DIR: /domains/proto.utwente.nl/deployment/uploads/
+      HOST_SERVER: s176.webhostingserver.nl
       SENTRY_ORG: sa-proto
       SENTRY_PROJECT: sa-proto-website
     steps:
@@ -74,8 +76,8 @@ jobs:
       - name: 📂 Sync files
         uses: SamKirkland/FTP-Deploy-Action@4.1.0
         with:
-          server: ${{ secrets.VIMEXX_DOMAIN }}
-          username: ${{ secrets.VIMEXX_FTP_USER }}
-          password: ${{ secrets.VIMEXX_FTP_PASSWORD }}
+          server: ${{ env.HOST_SERVER }}
+          username: ${{ secrets.FTP_USER }}
+          password: ${{ secrets.FTP_PASSWORD }}
           local-dir: ${{ env.BUILD_ARTIFACT_STAGING_DIR }}
-          server-dir: "/"
+          server-dir: ${{ env.BUILD_ARTIFACT_DESTINATION_DIR }}
