--- a/composer.json
+++ b/composer.json
@@ -42,20 +42,23 @@
   "minimum-stability": "stable",
   "require": {
     "aacotroneo/laravel-saml2": "^2.1.0",
-    "abcaeffchen/sephpa": "^2.1",
-    "alaouy/youtube": "2.2.5",
+    "abcaeffchen/sephpa": "2.0.0-beta1",
+    "alaouy/youtube": "^2.1",
     "biscolab/laravel-recaptcha": "^6",
+    "doctrine/dbal": "^3.2",
     "ext-calendar": "*",
     "ext-curl": "*",
     "ext-json": "*",
-    "globalcitizen/php-iban": "4.2.3",
-    "graham-campbell/markdown": "^15.2",
+    "globalcitizen/php-iban": "^2.6",
+    "graham-campbell/markdown": "^15.0",
     "guzzlehttp/guzzle": "^7.5",
-    "intervention/image": "^3.5.0",
+    "intervention/image": "^2.7",
+    "intervention/imagecache": "^2.5",
     "jwilsson/spotify-web-api-php": "^6.0",
-    "laravel/framework": "^11.0",
+    "laravel/framework": "^10.0",
     "laravel/helpers": "^1.5",
-    "laravel/passport": "^12.0",
+    "laravel/passport": "^11.5",
+    "laravelcollective/html": "^6.3",
     "league/commonmark": "^2.3",
     "league/oauth1-client": "^1.7",
     "milon/barcode": "^10.0",
@@ -63,21 +66,22 @@
     "nesbot/carbon": "^2.62",
     "nickurt/laravel-pwned-passwords": "1.10",
     "pragmarx/google2fa": "^0.7",
-    "sentry/sentry-laravel": "^4.4.1",
+    "sentry/sentry-laravel": "3.2",
     "solitweb/directadmin": "^3.0",
-    "spatie/laravel-csp": "^2.9",
-    "spatie/laravel-permission": "^6",
+    "spatie/laravel-csp": "^2.6",
+    "spatie/laravel-permission": "^5.5",
     "spipu/html2pdf": "^5.2",
-    "vinkla/hashids": "^12.0",
+    "vinkla/hashids": "^11.0",
+    "willvincent/feeds": "^2.4",
     "laravel/legacy-factories": "^1.3",
     "setasign/tfpdf": "^1.33"
   },
   "require-dev": {
-    "barryvdh/laravel-ide-helper": "^3.0",
+    "barryvdh/laravel-ide-helper": "^2.8.2",
     "fakerphp/faker": "^1.13",
     "itsgoingd/clockwork": "^5.1",
     "laravel/tinker": "^2.6",
-    "larastan/larastan": "^2.7.0",
+    "nunomaduro/larastan": "^2.4",
     "symfony/css-selector": "~4.0",
     "symfony/dom-crawler": "~4.0",
     "laravel/sail": "^1.16",
