--- a/.github/workflows/deploy_check.yml
+++ b/.github/workflows/deploy_check.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches-ignore:
       - master
+      - vimexx
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
@@ -50,12 +51,3 @@ jobs:
 
       - name: 🗑️ Remove storage directory
         run: rm -rf storage
-
-      - name: 📝 Create Sentry release
-        uses: getsentry/action-release@v1
-        env:
-          SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
-          SENTRY_ORG: ${{ env.SENTRY_ORG }}
-          SENTRY_PROJECT: ${{ env.SENTRY_PROJECT }}
-        with:
-          environment: production
