--- a/composer.json
+++ b/composer.json
@@ -74,7 +74,8 @@
     "vinkla/hashids": "^11.0",
     "willvincent/feeds": "^2.4",
     "laravel/legacy-factories": "^1.3",
-    "setasign/tfpdf": "^1.33"
+    "setasign/tfpdf": "^1.33",
+    "johngrogg/ics-parser": "^3.4"
   },
   "require-dev": {
     "barryvdh/laravel-ide-helper": "^2.8.2",
