Update the .env files

--- a/.env.dev
+++ b/.env.dev
@@ -102,7 +102,9 @@ SEPA_CI=CREDITOR_ID
 
 FONTAWESOME_KIT=KIT_URL
 
-TIMETABLE_GOOGLE_CALENDAR_ID=timetable_id@import.calendar.google.com
+TIMETABLE_ICAL_LINK_Y1=https://ical.proto.utwente.nl/y1/ical.ics
+TIMETABLE_ICAL_LINK_Y2=https://ical.proto.utwente.nl/y2/ical.ics
+TIMETABLE_ICAL_LINK_Y3=https://ical.proto.utwente.nl/y3/ical.ics
 SMARTXP_GOOGLE_CALENDAR_ID=smartxp_id@import.calendar.google.com
 PROTOPENERS_GOOGLE_CALENDAR_ID=protopeners_id@import.calendar.google.com
 
