--- a/composer.json
+++ b/composer.json
@@ -58,10 +58,10 @@
     "laravel/passport": "^12.0",
     "league/commonmark": "^2.3",
     "league/oauth1-client": "^1.7",
-    "milon/barcode": "^10.0",
-    "mollie/laravel-mollie": "^2.15",
+    "milon/barcode": "^11.0",
+    "mollie/laravel-mollie": "^3",
     "nesbot/carbon": "^2.62",
-    "nickurt/laravel-pwned-passwords": "1.10",
+    "nickurt/laravel-pwned-passwords": "^1.11",
     "pragmarx/google2fa": "^0.7",
     "sentry/sentry-laravel": "^4.4.1",
     "solitweb/directadmin": "^3.0",
