--- a/.github/workflows/fix_php_and_test.yml
+++ b/.github/workflows/fix_php_and_test.yml
@@ -104,7 +104,7 @@ jobs:
           DB_CONNECTION: mysql
           DB_DATABASE: testing
           DB_PORT: ${{ job.services.mysql.ports['3306'] }}
-          DB_USER: root
+          DB_USERNAME: root
           DB_PASSWORD: secret
           DB_HOST: 127.0.0.1
         run: |
