--- a/.github/workflows/fix_php_and_test.yml
+++ b/.github/workflows/fix_php_and_test.yml
@@ -5,17 +5,17 @@ jobs:
     runs-on: ubuntu-latest
     name: 🛠 Fix PHP formatting
     steps:
-      - uses: shivammathur/setup-php@v2
-        with:
-          php-version: ${{ env.PHP_VERSION }}
-          coverage: none
-
       - uses: actions/checkout@v4
         with:
           ref: ${{ github.head_ref }}
 
       - name: 🔍 Read .env
         run: grep -E 'PHP_VERSION' .env.prod >> $GITHUB_ENV
+
+      - uses: shivammathur/setup-php@v2
+        with:
+          php-version: ${{ env.PHP_VERSION }}
+          coverage: xdebug
 
       - uses: ramsey/composer-install@v3
         with:
@@ -75,14 +75,14 @@ jobs:
         with:
           ref: ${{ github.head_ref }}
 
+      - name: 🔍 Read .env
+        run: (grep -E 'PHP_VERSION' .env.prod >> $GITHUB_ENV && cp .env.ci .env)
+
       - name: 🖱️ Setup PHP v${{ env.PHP_VERSION }}
         uses: shivammathur/setup-php@v2
         with:
           php-version: ${{ env.PHP_VERSION }}
           coverage: none
-
-      - name: 🔍 Read .env
-        run: (grep -E 'PHP_VERSION' .env.prod >> $GITHUB_ENV && cp .env.ci .env)
 
       - uses: ramsey/composer-install@v3
         with:
