Set SSL to false in env.ci

--- a/.env.ci
+++ b/.env.ci
@@ -1,11 +1,12 @@
+APP_ENV=ci
+DEBUG=true
+SSL=false
+
 PHP_VERSION=8.2
 NODE_VERSION=16
 
-APP_URL=http://127.0.0.1
-
-APP_ENV=ci
 APP_KEY=
-APP_DEBUG=true
+APP_URL=http://127.0.0.1
 APP_TIMEZONE=UTC
 
 SESSION_DRIVER=array
