Fix the website breaking when cached

--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,11 @@
 
 # Development tools
 /node_modules
+
+# Cache files
 .tmp
+*.cache
+/bootstrap/cache/
 
 # Local files
 /personal
@@ -44,4 +48,4 @@ storage/oauth-public.key
 !/docker/mariadb/.gitkeep
 /docker/nginx-log/*
 !/docker/nginx-log/.gitkeep
-*.cache
+
