--- a/.github/workflows/fix_php_and_test.yml
+++ b/.github/workflows/fix_php_and_test.yml
@@ -43,9 +43,9 @@ jobs:
         run: ./vendor/bin/pint
 
       - name: Commit changes
-        uses: stefanzweifel/git-auto-commit-action@v4
+        uses: stefanzweifel/git-auto-commit-action@v5
         with:
-          commit_message: PHP Linting (Pint)
+          commit_message: PHP Automatic Fixing (Pint & Rector)
           skip_fetch: true
   deploy:
     name: Deploy Check
