--- a/.github/workflows/fix_php_and_test.yml
+++ b/.github/workflows/fix_php_and_test.yml
@@ -1,9 +1,9 @@
-name: 🛠 Format
+name: 🛠 Fix PHP, 🐘 Test and ⚙ Deploy Check
 on: pull_request
 jobs:
   phplint:
     runs-on: ubuntu-latest
-    name: 🛠 Fix PHP formatting
+    name: 🛠 PHP Automatic Fixing (Pint & Rector)
     steps:
       - uses: actions/checkout@v4
         with:
@@ -48,7 +48,7 @@ jobs:
           commit_message: PHP Automatic Fixing (Pint & Rector)
           skip_fetch: true
   deploy:
-    name: Deploy Check
+    name: 🐘 Test and ⚙ Deploy Check
     runs-on: ubuntu-latest
     needs: phplint
     services:
