--- a/.github/workflows/deploy_check.yml
+++ b/.github/workflows/deploy_check.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches-ignore:
       - master
+      - vimexx
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
@@ -13,13 +14,6 @@ jobs:
   deploy:
     name: Deploy Check
     runs-on: ubuntu-latest
-    env:
-      BUILD_SOURCE_DIR: .
-      BUILD_ARTIFACT_STAGING_DIR: build/
-      BUILD_ARTIFACT_DESTINATION_DIR: /domains/proto.utwente.nl/deployment/uploads/
-      HOST_SERVER: s176.webhostingserver.nl
-      SENTRY_ORG: sa-proto
-      SENTRY_PROJECT: sa-proto-website
     steps:
       - name: 🛎️ Checkout project
         uses: actions/checkout@v3
@@ -50,12 +44,3 @@ jobs:
 
       - name: 🗑️ Remove storage directory
         run: rm -rf storage
-
-      - name: 📝 Create Sentry release
-        uses: getsentry/action-release@v1
-        env:
-          SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
-          SENTRY_ORG: ${{ env.SENTRY_ORG }}
-          SENTRY_PROJECT: ${{ env.SENTRY_PROJECT }}
-        with:
-          environment: production
