--- a/.github/workflows/vimexx_deploy.yml
+++ b/.github/workflows/vimexx_deploy.yml
@@ -20,7 +20,7 @@ jobs:
       SENTRY_PROJECT: staging
     steps:
       - name: 🛎️ Checkout project
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: 🔍 Read .env
         run: grep -E 'PHP_VERSION|NODE_VERSION' .env.prod >> $GITHUB_ENV
@@ -35,7 +35,7 @@ jobs:
           composer-options: "--ignore-platform-reqs --optimize-autoloader --prefer-dist --no-dev"
 
       - name: 🖱️ Set Node v${{ env.NODE_VERSION }}
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
           node-version: ${{ env.NODE_VERSION }}
           cache: npm
@@ -62,8 +62,9 @@ jobs:
         run: mkdir ${{ env.BUILD_ARTIFACT_STAGING_DIR }}
 
       - name: 🗄️ ZIP Build
-        uses: TheDoctor0/zip-release@0.6.1
+        uses: TheDoctor0/zip-release@0.7.5
         with:
+          type: 'zip'
           filename: ${{ env.BUILD_ARTIFACT_STAGING_DIR }}build.zip
           path: ${{ env.BUILD_SOURCE_DIR }}
           exclusions: 'storage/* build/* node_modules/*'
@@ -72,7 +73,7 @@ jobs:
         run: openssl md5 ${{ env.BUILD_ARTIFACT_STAGING_DIR }}build.zip | cut -d" " -f2 > ${{ env.BUILD_ARTIFACT_STAGING_DIR }}checksum.txt
 
       - name: 📂 Sync files
-        uses: SamKirkland/FTP-Deploy-Action@4.1.0
+        uses: SamKirkland/FTP-Deploy-Action@4.3.5
         with:
           server: ${{ secrets.VIMEXX_DOMAIN }}
           username: ${{ secrets.VIMEXX_FTP_USER }}
