--- a/.env.dev
+++ b/.env.dev
@@ -9,7 +9,7 @@ APP_KEY=SomeKey
 PERSONAL_PROTO_KEY=personal_proto_key
 
 APP_URL=http://localhost:8080
-STATIC_URL=
+ ASSET_URL=
 ANALYTICS_URL=analytics.saproto.nl
 FISHCAM_URL=https://fish.cam
 
