--- a/composer.json
+++ b/composer.json
@@ -70,7 +70,12 @@
     "spipu/html2pdf": "^5.2",
     "vinkla/hashids": "^12.0",
     "willvincent/feeds": "^2.4",
-    "setasign/tfpdf": "^1.33"
+    "setasign/tfpdf": "^1.33",
+    "inertiajs/inertia-laravel": "^1.3",
+    "tightenco/ziggy": "^2.3",
+    "spatie/laravel-data": "^4.9",
+    "spatie/laravel-typescript-transformer": "^2.4",
+    "spatie/enum": "^3.13"
   },
   "require-dev": {
     "barryvdh/laravel-ide-helper": "^3.0",
