--- a/package.json
+++ b/package.json
@@ -1,51 +1,71 @@
 {
-  "name": "saproto",
-  "description": "S.A. Proto Main Website",
-  "main": "./public/index.php",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/saproto/saproto.git"
-  },
-  "keywords": [
-    "SAPROTO",
-    "Utwente",
-    "University of Twente",
-    "Laravel",
-    "JS",
-    "SASS",
-    "CSS",
-    "Grunt"
-  ],
-  "bugs": {
-    "url": "https://github.com/saproto/saproto/issues"
-  },
-  "homepage": "https://github.com/saproto/saproto/tree/master/example",
-  "private": true,
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build"
-  },
-  "dependencies": {
-    "@popperjs/core": "^2.11.4",
-    "bootstrap": "^5.1.3",
-    "codethereal-iconpicker": "^1.2.1",
-    "cross-env": "^7.0.3",
-    "easymde": "^2.18.0",
-    "moment": "^2.29.2",
-    "quagga": "^0.12.1",
-    "signature_pad": "^3.0.0-beta.4",
-    "swiper": "^8.0.7",
-    "util.promisify": "^1.0.1"
-  },
-  "devDependencies": {
-    "glob": "^7.1.6",
-    "laravel-vite-plugin": "^0.7.8",
-    "postcss": "^8.2.7",
-    "postcss-discard-comments": "^4.0.2",
-    "resolve-url-loader": "^3.1.2",
-    "sass": "1.38.2",
-    "sass-loader": "^12.1.0",
-    "vite": "^4.3.9"
-  },
-  "type": "module"
+    "name": "saproto",
+    "description": "S.A. Proto Main Website",
+    "main": "./public/index.php",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/saproto/saproto.git"
+    },
+    "keywords": [
+        "SAPROTO",
+        "Utwente",
+        "University of Twente",
+        "Laravel",
+        "JS",
+        "SASS",
+        "CSS",
+        "Grunt"
+    ],
+    "bugs": {
+        "url": "https://github.com/saproto/saproto/issues"
+    },
+    "homepage": "https://github.com/saproto/saproto/tree/master/example",
+    "private": true,
+    "scripts": {
+        "dev": "vite",
+        "build": "vue-tsc && vite build"
+    },
+    "dependencies": {
+        "@popperjs/core": "^2.11.4",
+        "bootstrap": "^5.1.3",
+        "codethereal-iconpicker": "^1.2.1",
+        "cross-env": "^7.0.3",
+        "easymde": "^2.18.0",
+        "moment": "^2.29.2",
+        "quagga": "^0.6.16",
+        "signature_pad": "^3.0.0-beta.4",
+        "swiper": "^8.0.7",
+        "util.promisify": "^1.0.1"
+    },
+    "devDependencies": {
+        "@inertiajs/vue3": "^1.2.0",
+        "@tailwindcss/forms": "^0.5.3",
+        "@tailwindcss/typography": "^0.5.13",
+        "@typescript-eslint/eslint-plugin": "^8.8.0",
+        "@typescript-eslint/parser": "^8.8.0",
+        "@vitejs/plugin-vue": "^5.0.0",
+        "autoprefixer": "^10.4.12",
+        "axios": "^1.6.4",
+        "eslint": "^9.11.1",
+        "eslint-config-prettier": "^9.1.0",
+        "eslint-plugin-prettier": "^5.2.1",
+        "eslint-plugin-vue": "^9.28.0",
+        "glob": "^7.1.6",
+        "laravel-vite-plugin": "^1.0",
+        "postcss": "^8.4.31",
+        "postcss-discard-comments": "^7.0.3",
+        "prettier": "^3.3.3",
+        "resolve-url-loader": "^5.0.0",
+        "sass": "1.38.2",
+        "sass-loader": "^12.1.0",
+        "tailwindcss": "^3.2.1",
+        "tw-colors": "^3.3.2",
+        "typescript": "^5.0.2",
+        "vite": "^5.0",
+        "vite-plugin-checker": "^0.6.4",
+        "vite-plugin-eslint": "^1.8.1",
+        "vue": "^3.4.0",
+        "vue-tsc": "^2.1.6"
+    },
+    "type": "module"
 }
