--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "postcss": "^8.4.24",
     "postcss-discard-comments": "^4.0.2",
     "prettier": "^3.0.0",
+    "prettier-plugin-tailwindcss": "^0.5.7",
     "resolve-url-loader": "^3.1.2",
     "sass": "1.38.2",
     "sass-loader": "^12.1.0",
