add the HASHIDS_SECRET_EVENTS to .env.ci

--- a/.env.ci
+++ b/.env.ci
@@ -5,6 +5,8 @@ SSL=false
 PHP_VERSION=8.2
 NODE_VERSION=16
 
+HASHIDS_SECRET_EVENTS=RAND_STRING
+
 APP_KEY=
 APP_URL=http://127.0.0.1
 APP_TIMEZONE=UTC
