--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     },
     "dependencies": {
         "@popperjs/core": "^2.11.4",
+        "@rushstack/eslint-patch": "^1.10.4",
+        "@vue/eslint-config-typescript": "^13.0.0",
         "bootstrap": "^5.1.3",
         "codethereal-iconpicker": "^1.2.1",
         "cross-env": "^7.0.3",
@@ -35,7 +37,8 @@
         "quagga": "^0.6.16",
         "signature_pad": "^3.0.0-beta.4",
         "swiper": "^8.0.7",
-        "util.promisify": "^1.0.1"
+        "util.promisify": "^1.0.1",
+        "vue3-toastify": "^0.2.3"
     },
     "devDependencies": {
         "@inertiajs/vue3": "^1.2.0",
@@ -46,11 +49,10 @@
         "@vitejs/plugin-vue": "^5.0.0",
         "autoprefixer": "^10.4.12",
         "axios": "^1.6.4",
-        "eslint": "^9.11.1",
         "eslint-config-prettier": "^9.1.0",
         "eslint-plugin-prettier": "^5.2.1",
         "eslint-plugin-vue": "^9.28.0",
-        "glob": "^7.1.6",
+        "glob": "^11.0",
         "laravel-vite-plugin": "^1.0",
         "postcss": "^8.4.31",
         "postcss-discard-comments": "^7.0.3",
