Added the GoogleSync command

--- a/.env.prod
+++ b/.env.prod
@@ -98,3 +98,5 @@ FONTAWESOME_KIT=KIT_URL
 TIMETABLE_GOOGLE_CALENDAR_ID=timetable_id@import.calendar.google.com
 SMARTXP_GOOGLE_CALENDAR_ID=smartxp_id@import.calendar.google.com
 PROTOPENERS_GOOGLE_CALENDAR_ID=protopeners_id@import.calendar.google.com
+
+GOOGLE_APPLICATION_CREDENTIALS=
