--- a/composer.json
+++ b/composer.json
@@ -70,7 +70,8 @@
     "spipu/html2pdf": "^5.2",
     "vinkla/hashids": "^12.0",
     "willvincent/feeds": "^2.4",
-    "setasign/tfpdf": "^1.33"
+    "setasign/tfpdf": "^1.33",
+    "google/apiclient": "^2.15.0"
   },
   "require-dev": {
     "barryvdh/laravel-ide-helper": "^3.0",
@@ -91,7 +92,8 @@
     "psr-4": {
       "App\\": "app/",
       "Database\\Seeders\\": "database/seeders/",
-      "Database\\Factories\\": "database/factories/"
+      "Database\\Factories\\": "database/factories/",
+      "Google\\": "vendor/google/apiclient/src/"
     }
   },
   "autoload-dev": {
