--- a/package.json
+++ b/package.json
@@ -26,10 +26,11 @@
         "build": "vue-tsc && vite build"
     },
     "dependencies": {
+        "@nabla/vite-plugin-eslint": "^2.0.4",
         "@popperjs/core": "^2.11.4",
         "@rushstack/eslint-patch": "^1.10.4",
         "@vue/eslint-config-typescript": "^13.0.0",
-        "bootstrap": "^5.1.3",
+        "bootstrap": "^5.3.0",
         "codethereal-iconpicker": "^1.2.1",
         "cross-env": "^7.0.3",
         "easymde": "^2.18.0",
@@ -38,12 +39,14 @@
         "signature_pad": "^3.0.0-beta.4",
         "swiper": "^8.0.7",
         "util.promisify": "^1.0.1",
+        "vue-barcode-reader": "^1.0.3",
         "vue3-toastify": "^0.2.3"
     },
     "devDependencies": {
         "@inertiajs/vue3": "^1.2.0",
         "@tailwindcss/forms": "^0.5.3",
         "@tailwindcss/typography": "^0.5.13",
+        "@types/vue-barcode-reader": "^0.0.3",
         "@typescript-eslint/eslint-plugin": "^8.8.0",
         "@typescript-eslint/parser": "^8.8.0",
         "@vitejs/plugin-vue": "^5.0.0",
@@ -65,7 +68,6 @@
         "typescript": "^5.0.2",
         "vite": "^5.0",
         "vite-plugin-checker": "^0.6.4",
-        "vite-plugin-eslint": "^1.8.1",
         "vue": "^3.4.0",
         "vue-tsc": "^2.1.6"
     },
