--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "build": "vite build"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.6.0",
     "@popperjs/core": "^2.11.4",
     "bootstrap": "^5.1.3",
     "codethereal-iconpicker": "^1.2.1",
