Fix the mail and add a test

--- a/composer.json
+++ b/composer.json
@@ -104,7 +104,7 @@
             "vendor/bin/rector process & ./vendor/bin/pint"
         ],
         "test": [
-            "phpunit"
+            "php artisan test --parallel"
         ],
         "rector": [
             "vendor/bin/rector process"
