--- a/.env.dev
+++ b/.env.dev
@@ -69,6 +69,7 @@ LARAVEL_TO_PROTUBE_SECRET=321
 PROTUBE_TO_LARAVEL_SECRET=SECRET_KEY
 
 LDAP_PROXY_URL=https://path.to/proxy
+POST_LDAP_PROXY_URL=https://path.to/proxy
 LDAP_PROXY_KEY=VERY_SECRET_KEY
 
 MOLLIE_KEY=test_xxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
