--- a/.env.prod
+++ b/.env.prod
@@ -62,6 +62,7 @@ LARAVEL_TO_PROTUBE_SECRET=PROTUBE_SECRET
 PROTUBE_TO_LARAVEL_SECRET=SECRET_KEY
 
 LDAP_PROXY_URL=https://path.to/proxy
+POST_LDAP_PROXY_URL=https://path.to/proxy
 LDAP_PROXY_KEY=VERY_SECRET_KEY
 
 MOLLIE_KEY=test_xxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
