Create the new membership system (#2250)
* Start work on the non destructive part of the new membership system

* Fixed the move command, found around found: 70 extra primary users

* Make the markmembersasprimary cmd

* Fix the rebase issues

* Fix names with cyrillic characters and make it a sync

* PHP Automatic Fixing (Pint & Rector)

* Update composer.lock

* add back in the fontawesome free package

* Incorporate feedback and show the differences between the systems in the new membership query

* Add a boolean to the member where the board can set if they indicate to be a primary member at another association

* Add the lightsaml to composer and fix the imports

* Fix some types

* Move the UtAccount to the member object

* PHP Automatic Fixing (Pint & Rector)

* Update composer.lock

* Implement review feedback

* PHP Automatic Fixing (Pint & Rector)

* Small fixes

* Small addendums

---------

Co-authored-by: ysbrandB <ysbrandB@users.noreply.github.com>

--- a/composer.json
+++ b/composer.json
@@ -70,7 +70,10 @@
         "spipu/html2pdf": "^5.2",
         "vinkla/hashids": "^12.0",
         "willvincent/feeds": "^2.4",
-        "setasign/tfpdf": "^1.33"
+        "setasign/tfpdf": "^1.33",
+        "ext-iconv": "*",
+        "litesaml/lightsaml": "^4.2",
+        "ext-zlib": "*"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^3.0",
@@ -101,16 +104,16 @@
     },
     "scripts": {
         "fix": [
-            "vendor/bin/rector process & ./vendor/bin/pint"
+            "./vendor/bin/rector process && ./vendor/bin/pint"
+        ],
+        "pint": [
+            "./vendor/bin/pint"
         ],
         "test": [
             "php artisan test --parallel"
         ],
         "rector": [
             "vendor/bin/rector process"
-        ],
-        "pint": [
-            "./vendor/bin/pint"
         ],
         "ide-helper": [
             "php artisan cache:clear",
