--- a/.github/workflows/fix_php_and_test.yml
+++ b/.github/workflows/fix_php_and_test.yml
@@ -4,7 +4,7 @@ on: pull_request
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
-  
+
 jobs:
   phplint:
     runs-on: ubuntu-latest
@@ -57,14 +57,13 @@ jobs:
     runs-on: ubuntu-latest
     needs: phplint
     services:
-      mysql:
-        image: mysql:5.7
+      mariadb:
+        image: mariadb:10
         env:
-          MYSQL_ROOT_PASSWORD: secret
-          MYSQL_DATABASE: testing
+          MARIADB_DATABASE: testing
+          MARIADB_ROOT_PASSWORD: secret
         ports:
           - 3306
-        options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
     env:
       BUILD_SOURCE_DIR: .
       BUILD_ARTIFACT_STAGING_DIR: build/
