--- a/.github/workflows/fix_php_and_test.yml
+++ b/.github/workflows/fix_php_and_test.yml
@@ -57,13 +57,14 @@ jobs:
     runs-on: ubuntu-latest
     needs: phplint
     services:
-      mariadb:
+      mysql:
         image: mariadb:10
         env:
-          MARIADB_DATABASE: testing
-          MARIADB_ROOT_PASSWORD: secret
+          MYSQL_ROOT_PASSWORD: secret
+          MYSQL_DATABASE: testing
         ports:
           - 3306
+        options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
     env:
       BUILD_SOURCE_DIR: .
       BUILD_ARTIFACT_STAGING_DIR: build/
@@ -76,6 +77,14 @@ jobs:
         uses: actions/checkout@v4
         with:
           ref: ${{ github.head_ref }}
+
+      - name: Verify MariaDB connection
+        env:
+          PORT: ${{ job.services.mysql.ports['3306'] }}
+        run: |
+          while ! mysqladmin ping -h"127.0.0.1" -P"$PORT" --silent; do
+            sleep 1
+          done
 
       - name: 🔍 Read .env
         run: (grep -E 'PHP_VERSION' .env.prod >> $GITHUB_ENV && cp .env.ci .env)
