Move to the new App::environment

--- a/.env.dev
+++ b/.env.dev
@@ -10,7 +10,7 @@ PERSONAL_PROTO_KEY=personal_proto_key
 
 APP_URL=http://localhost:8080
 STATIC_URL=
-ANALYTICS_URL=analytics.saproto.nl
+ANALYTICS_URL=notanalytics.saproto.nl
 FISHCAM_URL=https://fish.cam
 
 COOKIE_DOMAIN=localhost
