--- a/composer.json
+++ b/composer.json
@@ -95,7 +95,8 @@
         "psr-4": {
             "App\\": "app/",
             "Database\\Seeders\\": "database/seeders/",
-            "Database\\Factories\\": "database/factories/"
+            "Database\\Factories\\": "database/factories/",
+            "Google\\": "vendor/google/apiclient/src/"
         }
     },
     "autoload-dev": {
