--- a/.env.prod
+++ b/.env.prod
@@ -95,3 +95,5 @@ SEPA_CI=CREDITOR_ID
 TIMETABLE_GOOGLE_CALENDAR_ID=timetable_id@import.calendar.google.com
 SMARTXP_GOOGLE_CALENDAR_ID=smartxp_id@import.calendar.google.com
 PROTOPENERS_GOOGLE_CALENDAR_ID=protopeners_id@import.calendar.google.com
+
+GOOGLE_APPLICATION_CREDENTIALS=
