--- a/composer.json
+++ b/composer.json
@@ -73,7 +73,8 @@
         "ext-iconv": "*",
         "litesaml/lightsaml": "^4.2",
         "ext-zlib": "*",
-        "intervention/image-laravel": "^1.3"
+        "intervention/image-laravel": "^1.3",
+        "google/apiclient": "^2.15.0"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^3.0",
@@ -94,7 +95,8 @@
         "psr-4": {
             "App\\": "app/",
             "Database\\Seeders\\": "database/seeders/",
-            "Database\\Factories\\": "database/factories/"
+            "Database\\Factories\\": "database/factories/",
+            "Google\\": "vendor/google/apiclient/src/"
         }
     },
     "autoload-dev": {
