Move the sessions over to redis

--- a/.env.dev
+++ b/.env.dev
@@ -27,11 +27,15 @@ SAIL_APP_PORT=8080
 SAIL_PMA_PORT=8081
 SAIL_MAILPIT_PORT=8025
 SAIL_SQL_PORT=3306
+FORWARD_REDIS_PORT=6397
 SAIL_XDEBUG_MODE=develop
 
 CACHE_DRIVER=file
-SESSION_DRIVER=database
 QUEUE_DRIVER=database
+
+SESSION_DRIVER=redis
+SESSION_CONNECTION=default
+REDIS_HOST=redis
 
 BROADCAST_DRIVER=log
 
@@ -40,8 +44,6 @@ SMTP_HOST=mailpit
 SMTP_PORT=1025
 SMTP_USERNAME=null
 SMTP_PASSWORD=null
-
-API_POSTCODE_TOKEN=
 
 GOOGLE_KEY_PUBLIC=API_KEY
 GOOGLE_KEY_PRIVATE=API_KEY
