--- a/.env.prod
+++ b/.env.prod
@@ -24,16 +24,21 @@ DB_USERNAME=database_username
 DB_PASSWORD=database_password
 
 CACHE_DRIVER=file
-SESSION_DRIVER=database
 QUEUE_DRIVER=database
+
+SESSION_DRIVER=redis
+SESSION_CONNECTION=default
+REDIS_USERNAME=redis_username
+REDIS_HOST=redis_host
+REDIS_PASSWORD=redis_password
+REDIS_PORT=redis_port
+REDIS_DB=redis_db_number
 
 BROADCAST_DRIVER=log
 
 MAIL_DRIVER=smtp
 SMTP_USERNAME=user
 SMTP_PASSWORD=password
-
-API_POSTCODE_TOKEN=
 
 GOOGLE_KEY_PUBLIC=API_KEY
 GOOGLE_KEY_PRIVATE=API_KEY
