--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,7 +33,7 @@ services:
         ports:
             - '${SAIL_SQL_PORT:-3306}:3306'
         environment:
-            MYSQL_ROOT_PASSWORD: thisisareallystrongpassword123
+            MYSQL_ROOT_PASSWORD: 'thisisareallystrongpassword123'
             MYSQL_DATABASE: '${DB_DATABASE}'
             MYSQL_USER: '${DB_USERNAME}'
             MYSQL_PASSWORD: '${DB_PASSWORD}'
@@ -65,11 +65,11 @@ services:
         ports:
             - '${SAIL_PMA_PORT}:80'
         environment:
-            - PMA_HOST=mariadb
+            - 'PMA_HOST=mariadb'
             - 'PMA_USER=${DB_USERNAME}'
             - 'PMA_PASSWORD=${DB_PASSWORD}'
             - 'PMA_PORT=${SAIL_SQL_PORT}'
-            - UPLOAD_LIMIT=500M
+            - 'UPLOAD_LIMIT=500M'
         networks:
             - sail
         depends_on:
