Install laravel Dusk

--- a/composer.json
+++ b/composer.json
@@ -89,7 +89,8 @@
         "driftingly/rector-laravel": "^1.2",
         "pestphp/pest": "^3.0",
         "mockery/mockery": "^1.6",
-        "pestphp/pest-plugin-laravel": "^3.0"
+        "pestphp/pest-plugin-laravel": "^3.0",
+        "laravel/dusk": "^8.2"
     },
     "autoload": {
         "psr-4": {
