--- a/.github/workflows/fix_php_and_test.yml
+++ b/.github/workflows/fix_php_and_test.yml
@@ -6,6 +6,33 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
+  frontendbuild:
+    runs-on: ubuntu-latest
+    name: 🛠 Build front-end
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          ref: ${{ github.head_ref }}
+
+      - name: 🔍 Read .env
+        run: grep -E 'PHP_VERSION' .env.prod >> $GITHUB_ENV
+
+      - name: 🖱️ Set Node v${{ env.NODE_VERSION }}
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{ env.NODE_VERSION }}
+          cache: npm
+
+      - name: 📥 Install front-end dependencies
+        run: npm ci --ignore-scripts
+
+      - run: npm run build --if-present
+
+      - uses: actions/upload-artifact@v3
+        with:
+          name: Build
+          path: public/build
+
   phplint:
     runs-on: ubuntu-latest
     name: 🛠 PHP Automatic Fixing (Pint & Rector)
@@ -55,7 +82,7 @@ jobs:
   deploy:
     name: 🐘 Test and ⚙ Deploy Check
     runs-on: ubuntu-latest
-    needs: phplint
+    needs: [ phplint, frontendbuild ]
     services:
       mysql:
         image: mariadb:10
@@ -65,13 +92,6 @@ jobs:
         ports:
           - 3306
         options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
-    env:
-      BUILD_SOURCE_DIR: .
-      BUILD_ARTIFACT_STAGING_DIR: build/
-      BUILD_ARTIFACT_DESTINATION_DIR: /domains/proto.utwente.nl/deployment/uploads/
-      HOST_SERVER: s176.webhostingserver.nl
-      SENTRY_ORG: sa-proto
-      SENTRY_PROJECT: sa-proto-website
     steps:
       - name: 🛎️ Checkout project
         uses: actions/checkout@v4
@@ -99,16 +119,10 @@ jobs:
         with:
           composer-options: "--ignore-platform-reqs --optimize-autoloader --prefer-dist"
 
-      - name: 🖱️ Set Node v${{ env.NODE_VERSION }}
-        uses: actions/setup-node@v4
+      - uses: actions/download-artifact@v3
         with:
-          node-version: ${{ env.NODE_VERSION }}
-          cache: npm
-
-      - name: 📥 Install front-end dependencies
-        run: npm ci --ignore-scripts
-      - name: 🔨 build front-end
-        run: npm run build
+          name: Build
+          path: public/build
 
       - name: Cache Pest test results
         uses: actions/cache@v4
