try running dusk tests in ci

--- a/.env.ci
+++ b/.env.ci
@@ -11,6 +11,8 @@ APP_KEY=
 APP_URL=http://127.0.0.1
 APP_TIMEZONE=UTC
 
+BROWSER: chrome
+
 SESSION_DRIVER=array
 CACHE_DRIVER=array
 QUEUE_DRIVER=sync
