--- a/.github/workflows/fix_php_and_test.yml
+++ b/.github/workflows/fix_php_and_test.yml
@@ -225,7 +225,7 @@ jobs:
           php artisan dusk:chrome-driver --detect
           ./vendor/laravel/dusk/bin/chromedriver-linux --port=9515 &
           php artisan serve --no-reload &
-          php artisan dusk
+          php artisan dusk --pest
       - name: Upload Screenshots
         if: failure()
         uses: actions/upload-artifact@v4
