--- a/.github/workflows/fix_php_and_test.yml
+++ b/.github/workflows/fix_php_and_test.yml
@@ -34,7 +34,8 @@ jobs:
           path: public/build
 
   call-phplint:
-    - uses: ./.github/workflows/fix_php.yml
+    - name: 🖱️ Setup PHP v${{ env.PHP_VERSION }}
+      uses: ./.github/workflows/fix_php.yml
       secrets: inherit
   pest:
     name: 🐘 Pest Tests
