Remove the redis sessions

--- a/.env.dev
+++ b/.env.dev
@@ -27,15 +27,11 @@ SAIL_APP_PORT=8080
 SAIL_PMA_PORT=8081
 SAIL_MAILPIT_PORT=8025
 SAIL_SQL_PORT=3306
-FORWARD_REDIS_PORT=6397
 SAIL_XDEBUG_MODE=develop
 
 CACHE_DRIVER=file
+SESSION_DRIVER=database
 QUEUE_DRIVER=database
-
-SESSION_DRIVER=redis
-SESSION_CONNECTION=default
-REDIS_HOST=redis
 
 BROADCAST_DRIVER=log
 
