Move our sessions over to redis

--- a/.env.dev
+++ b/.env.dev
@@ -28,10 +28,14 @@ SAIL_PMA_PORT=8081
 SAIL_MAILPIT_PORT=8025
 SAIL_SQL_PORT=3306
 SAIL_XDEBUG_MODE=develop
+FORWARD_REDIS_PORT=6397
 
 CACHE_DRIVER=file
-SESSION_DRIVER=database
 QUEUE_DRIVER=database
+
+SESSION_DRIVER=redis
+SESSION_CONNECTION=session
+REDIS_HOST=redis
 
 BROADCAST_DRIVER=log
 
