add SESSION_CONNECTION to .env.prod

--- a/.env.prod
+++ b/.env.prod
@@ -27,6 +27,7 @@ CACHE_DRIVER=file
 QUEUE_DRIVER=database
 
 SESSION_DRIVER=redis
+SESSION_CONNECTION=session
 REDIS_USERNAME=redis_username
 REDIS_HOST=redis_host
 REDIS_PASSWORD=redis_password
