Install Dusk and add to our CI/CD (#2294)
* Properly configure phpunit.xml

* PHP Automatic Fixing (Pint & Rector)

* Add redis and selenium

* Move the sessions over to redis

* Install laravel Dusk

* test if artifacts work like I think they do

* Squashed commit of the following:

commit 60d18b36eee670ce8cb7842b2e983087a931c8ed
Author: Jonathan Matarazzi <git@jonathanm.nl>
Date:   Fri Nov 29 21:16:50 2024 +0100

    Fix inactive member alias query (#2295)

    * Fix inactive member alias query

    * PHP Automatic Fixing (Pint & Rector)

    ---------

    Co-authored-by: JonaMata <JonaMata@users.noreply.github.com>

commit 4bcc8f70010f96a7bb1a2e1317246ea8dca7c725
Author: Jonathan Matarazzi <git@jonathanm.nl>
Date:   Thu Nov 28 23:37:43 2024 +0100

    Fix adding group members (#2292)

    * Fix adding group members

    * PHP Automatic Fixing (Pint & Rector)

    ---------

    Co-authored-by: JonaMata <JonaMata@users.noreply.github.com>

commit 99a5824560d057458da9ccc12a66ed051f0e938f
Author: Jonathan Matarazzi <git@jonathanm.nl>
Date:   Thu Nov 28 23:19:19 2024 +0100

    Add alias group check before syncing members (#2291)

    * Add alias group check before syncing members

    * PHP Automatic Fixing (Pint & Rector)

    ---------

    Co-authored-by: JonaMata <JonaMata@users.noreply.github.com>

commit 153f9fe8fe3373bfecc0d57926d85314ce47c407
Author: Jonathan Matarazzi <git@jonathanm.nl>
Date:   Thu Nov 28 23:05:37 2024 +0100

    Fix alias group filtering (#2290)

commit 3a454fcaf3eddb226d8c47b289d1a59a83122679
Author: Jonathan Matarazzi <git@jonathanm.nl>
Date:   Thu Nov 28 22:49:43 2024 +0100

    Fix count method call in string (#2289)

    * Fix count method call in string

    * PHP Automatic Fixing (Pint & Rector)

    ---------

    Co-authored-by: JonaMata <JonaMata@users.noreply.github.com>

commit 401345b7e440924ba18ed87c1727f88c63473dd4
Author: Jonathan Matarazzi <git@j

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,7 +10,13 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
+  call-phplint:
+    name: Fix php
+    uses: ./.github/workflows/fix_php.yml
+    secrets: inherit
+
   deploy:
+    needs: call-phplint
     name: Deploy
     runs-on: ubuntu-latest
     env:
