--- a/.env.dev
+++ b/.env.dev
@@ -37,8 +37,6 @@ SESSION_DRIVER=redis
 SESSION_CONNECTION=session
 REDIS_HOST=redis
 
-BROADCAST_DRIVER=log
-
 MAIL_DRIVER=smtp
 SMTP_HOST=mailpit
 SMTP_PORT=1025
@@ -115,6 +113,7 @@ PUSHER_APP_ID=app-id
 PUSHER_APP_KEY=app-key
 PUSHER_APP_SECRET=app-secret
 PUSHER_APP_CLUSTER=eu
+PUSHER_SCHEME=http
 
 VITE_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 VITE_PUSHER_HOST="${PUSHER_HOST}"
