--- a/.env.prod
+++ b/.env.prod
@@ -111,6 +111,7 @@ PUSHER_APP_SECRET=app-secret
 PUSHER_APP_CLUSTER=eu
 PUSHER_SCHEME=https
 
-VITE_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
-VITE_PUSHER_HOST="${PUSHER_HOST}"
-VITE_PUSHER_PORT="${PUSHER_PORT}"
+#These variables are set via the github actions secrets, because our frontend is built there.
+#VITE_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
+#VITE_PUSHER_HOST="${PUSHER_HOST}"
+#VITE_PUSHER_PORT="${PUSHER_PORT}"
