--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -50,6 +50,10 @@ jobs:
         run: npm ci --ignore-scripts
 
       - name: 🔨 build front-end
+        env:
+          VITE_PUSHER_APP_KEY: ${{ secrets.PUSHER_APP_KEY }}
+          VITE_PUSHER_HOST: ${{ secrets.PUSHER_HOST }}
+          VITE_PUSHER_PORT: ${{ secrets.PUSHER_PORT }}
         run: npm run build
 
       - name: 🗑️ Remove storage directory
